--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -2,28 +2,36 @@
     "cells": [
         {
             "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "# Example usage\n",
                 "\n",
                 "To use `core_equity_factors` in a project:"
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "0.0.0\n"
+                    ]
+                }
+            ],
             "source": [
                 "import core_equity_factors\n",
                 "\n",
                 "print(core_equity_factors.__version__)"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "core_equity_factors",
             "language": "python",
             "name": "python3"
         },
@@ -37,7 +45,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.5"
+            "version": "3.11.11"
         }
     },
     "nbformat": 4,
